# articubot_tutorial

./: CMakeLists.txt  package.xml
config/: view_bot.rviz
description/: robot_core.xacro
launch/: rsp.launch.py
